  * Make s-c-p-udev depend on python-dbus (closes: #627810).

  [ Josselin Mouette ]
  * Update repository URL.

  [ Emilio Pozuelo Monfort ]
  * New upstream release 1.4.0.
    + Doesn't use deprecated udev functions. Closes: #705521.
    + debian/control.in:
      - Update build dependencies.
    + debian/install:
      - Renamed to debian/system-config-printer.install.

 -- Jordi Mallach <jordi@debian.org>  Fri, 14 Oct 2011 19:45:42 +0200

system-config-printer (1.2.3-3) unstable; urgency=high

  * Depend on libxml2 (Closes: #597723)
  * Make system-config-printer conflict on hal-cups-utils to help
    lenny->>squeeze updates. Otherwise hal-cups-utils won't get removed. See
    http://lists.debian.org/debian-release/2010/09/msg00923.html for a
    discussion.

 -- Guido Günther <agx@sigxcpu.org>  Tue, 28 Sep 2010 10:48:07 +0200

system-config-printer (1.2.3-2) unstable; urgency=low

  * python-cupshelpers: Don't Break and Replace python-cupsutils since we
    don't share any files and this eases upgrades via apt-get.

 -- Guido Günther <agx@sigxcpu.org>  Sun, 12 Sep 2010 17:42:18 +0200

system-config-printer (1.2.3-1) unstable; urgency=medium

  [ Guido Günther ]
  * Add Vcs-{Svn,Browser} and Homepage URLs
  * Add myself to uploaders
  * pyversions, control.in: require python 2.6 (Closes: #594901)

  [ Josselin Mouette ]
  * pyversions, control.in: require python 2.5. Closes: #594402.

 -- Guido Günther <agx@sigxcpu.org>  Tue, 31 Aug 2010 13:25:48 +0200

system-config-printer (1.2.3-0.3) unstable; urgency=low

  * Non-maintainer upload.
  * Upload to unstable.

 -- Guido Günther <agx@sigxcpu.org>  Fri, 20 Aug 2010 17:49:59 +0200

system-config-printer (1.2.3-0.2) experimental; urgency=low

  * Non-maintainer upload.
  * Install debug.py and smburi.py in the cupshelpers package
    (Closes: #525714)

 -- Guido Günther <agx@sigxcpu.org>  Fri, 13 Aug 2010 20:29:23 +0200

system-config-printer (1.2.3-0.1) experimental; urgency=low

  * Non-maintainer upload.