@@ -33,6 +33,10 @@ system-config-printer (1.4.0-1) UNRELEASED; urgency=low
       - Update build dependencies.
     + debian/install:
       - Renamed to debian/system-config-printer.install.
+  * debian/rules,
+    debian/system-config-printer.install:
+    + Remove various hacks in debian/rules and just install the upstream
+      script to run system-config-printer{,-applet}.
 
  -- Jordi Mallach <jordi@debian.org>  Fri, 14 Oct 2011 19:45:42 +0200
 
